--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
       enabled: true
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://127.0.0.1:3306/eCommers_dev
+    url: jdbc:mariadb://127.0.0.1:3306/eatBook_dev
     username: root
     password:
   jpa:
