--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -2,7 +2,7 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: bambooogre@gmail.com
+    username:
     password:
     properties:
        mail:
