--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   profiles:
     active: dev
     include: secret
+  thymeleaf:
+    servlet:
+      produce-partial-output-while-processing: false
   jpa:
     properties:
       hibernate:
