--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -3,7 +3,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: bambooogre@gmail.com
-    password:
+    password: hreoolhxmiabtvre
     properties:
        mail:
          smtp:
