장바구니 찜 수정 필요

--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -5,8 +5,10 @@ spring:
     username: bambooogre@gmail.com
     password: hreoolhxmiabtvre
     properties:
-       mail:
-         smtp:
-           auth: true
-           starttls:
-             enable: true
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+  custom:
+    aladinkey: 키입력
