--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -3,12 +3,10 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: bambooogre@gmail.com
-    password: hreoolhxmiabtvre
+    password: hxmrrqizkuurabqp
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
-  custom:
-    aladinkey: 키입력
