application-secret.yml code fix

--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -3,10 +3,10 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: bambooogre@gmail.com
-    password: hreoolhxmiabtvre
+    password:
     properties:
-       mail:
-         smtp:
-           auth: true
-           starttls:
-             enable: true
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
