--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,3 +17,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update # DB 스키마 자동생성, 앱이 재실행되어도 데이터는 유지된다.
+    defer-datasource-initialization: true
+custom:
+  fileDirPath: C:\file_upload
