마지막 PR전 수정

--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -3,7 +3,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: bambooogre@gmail.com
-    password: 패스워드 테스트
+    password: yjepmnjdkwhzefdq
     properties:
       mail:
         smtp:
