--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	implementation 'org.webjars:bootstrap:5.1.3'
 	// maven
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	// batch
+	testImplementation 'org.springframework.batch:spring-batch-test'
 }
 
 tasks.named('test') {
