--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	// 부트스트랩
 	implementation 'org.webjars:bootstrap:5.1.3'
+	// Batch
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
