--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
   thymeleaf:
     servlet:
       produce-partial-output-while-processing: false
+  batch:
+    jdbc:
+      initialize-schema: always
   jpa:
     properties:
       hibernate:
