--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -38,9 +39,12 @@ dependencies {
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	// 부트스트랩
 	implementation 'org.webjars:bootstrap:5.1.3'
-	// Batch
-	implementation 'org.springframework.boot:spring-boot-starter-batch'
-	testImplementation 'org.springframework.security:spring-security-test'
+	// maven
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	// batch
+
+	testImplementation 'org.springframework.batch:spring-batch-test'
+
 }
 
 tasks.named('test') {
